--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -95,7 +95,7 @@
         padding: 5px;
 
         .journey-header {
-          border: 2px solid #ccc;
+          border: 3px solid #7a7676;
           padding: 10px;
         }
 
